--- a/tests.html
+++ b/tests.html
@@ -114,11 +114,11 @@
             <div class="row justify-content-between">
                 <div class="footer-nav col-lg-3 d-flex flex-column">
                     <p>Bootstrap</p>
-                    <span><a href="#">Docs</a></span>
-                    <span><a href="#">Examples</a></span>
-                    <span><a href="#">Icons</a></span>
-                    <span><a href="#">Themes</a></span>
-                    <span><a href="#">Blog</a></span>
+                    <span><a target="_blank" href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Docs</a></span>
+                    <span><a target="_blank" href="https://getbootstrap.com/docs/5.3/examples/">Examples</a></span>
+                    <span><a target="_blank" href="https://icons.getbootstrap.com/">Icons</a></span>
+                    <span><a target="_blank" href="https://themes.getbootstrap.com/">Themes</a></span>
+                    <span><a target="_blank" href="https://blog.getbootstrap.com/">Blog</a></span>
                 </div>
 
                 <div class="footer-nav col-lg-4 d-flex flex-column">
@@ -126,7 +126,6 @@
                     <span>Киценко И. В. ИСПВ-02</span>
                     <span>Ilyakitsenko@proton.me</span>
                     <span>2023-2024</span>
-
                 </div>
             </div>
         </div>
