--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="images/shortcut.svg" type="image/x-icon">
 </head>
 
-<body>
+<body id="element">
     <header>
         <div class="container d-flex align-items-center justify-content-center h-100 p-0 m-auto">
             <div class="fixed-top nav-fixed-bg">
@@ -71,9 +71,9 @@
 
         <section class="lessons" id="lessons">
             <div class="container">
-                <div class="row justify-content-center">
+                <div class="row">
                     <h2 class="text-center">Уроки</h2>
-                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                    <a href="lesson-1.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Урок 1 Установка Bootstrap</h3>
                             <img src="images/less-1.svg" alt="lesson-img">
