--- a/tests.html
+++ b/tests.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="images/shortcut.svg" type="image/x-icon">
 </head>
 
-<body>
+<body id="element">
     <header>
         <div class="container d-flex align-items-center justify-content-center h-100 p-0 m-auto">
             <div class="fixed-top nav-fixed-bg">
@@ -24,7 +24,7 @@
                         </button>
                         <div class="collapse navbar-collapse text-center lg-d-flex justify-content-end" id="navbarNavAltMarkup">
                             <div class="navbar-nav col-lg-8 d-flex justify-content-between">
-                                <a class="p-3 p-lg-0" href="#lessons">Уроки</a>
+                                <a class="p-3 p-lg-0" href="index.html#lessons">Уроки</a>
                                 <a class="p-3 p-lg-0" href="tests.html">Тесты</a>
                                 <a class="p-3 p-lg-0" target="_blank" href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Документация</a>
                                 <a class="p-3 p-lg-0" target="_blank" href="https://getbootstrap.com/docs/5.3/getting-started/download/">Скачать Bootstrap</a>
@@ -40,7 +40,7 @@
 
         <section class="tests">
             <div class="container">
-                <div class="row justify-content-center">
+                <div class="row">
                     <h1 class="text-center ">Тестирование по темам уроков</h1>
                     <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
