--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 
         <section class="lessons" id="lessons">
             <div class="container">
-                <div class="row">
+                <div class="row d-flex justify-content-center">
                     <h2 class="text-center">Уроки</h2>
-                    <a href="lesson-1.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                    <a href="lessons/lesson-1.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Урок 1 Установка Bootstrap</h3>
                             <img src="images/less-1.svg" alt="lesson-img">
