--- a/tests.html
+++ b/tests.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="images/shortcut.svg" type="image/x-icon">
 </head>
 
-<body id="element">
+<body class="scroll">
     <header>
         <div class="container d-flex align-items-center justify-content-center h-100 p-0 m-auto">
             <div class="fixed-top nav-fixed-bg">
@@ -19,15 +19,15 @@
                         <div class="col-1">
                             <a href="index.html"><img src="images/logo.svg" alt="logotype" class="logo-rotate"></a>
                         </div>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse text-center lg-d-flex justify-content-end" id="navbarNavAltMarkup">
                             <div class="navbar-nav col-lg-8 d-flex justify-content-between">
                                 <a class="p-3 p-lg-0" href="index.html#lessons">Уроки</a>
                                 <a class="p-3 p-lg-0" href="tests.html">Тесты</a>
-                                <a class="p-3 p-lg-0" target="_blank" href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Документация</a>
-                                <a class="p-3 p-lg-0" target="_blank" href="https://getbootstrap.com/docs/5.3/getting-started/download/">Скачать Bootstrap</a>
+                                <a class="p-3 p-lg-0" target="_blank" href="https://getbootstrap.com/docs/versions/">Документация</a>
+                                <a class="p-3 p-lg-0" target="_blank" href="https://getbootstrap.com/">Скачать Bootstrap</a>
                             </div>
                         </div>
                     </div>
@@ -40,7 +40,7 @@
 
         <section class="tests">
             <div class="container">
-                <div class="row">
+                <div class="row d-flex justify-content-center">
                     <h1 class="text-center ">Тестирование по темам уроков</h1>
                     <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
