first 2 lessons added

--- a/index.html
+++ b/index.html
@@ -75,53 +75,53 @@
                     <h2 class="text-center">Уроки</h2>
                     <a href="lessons/lesson-1.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Урок 1 Установка Bootstrap</h3>
+                            <h3 class="text-center pt-5">Урок 1 Введение и установка Bootstrap</h3>
                             <img src="images/less-1.svg" alt="lesson-img">
                         </div>
                     </a>
-                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                    <a href="lessons/lesson-2.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                        <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
+                            <h3 class="text-center pt-5">Урок 2 На чём строится Bootstrap</h3>
+                            <img src="images/less-1.svg" alt="lesson-img">
+                        </div>
+                    </a>
+                    <a href="lessons/lesson-3.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                        <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
+                            <h3 class="text-center pt-5">Урок 3 Строки и столбцы</h3>
+                            <img src="images/less-1.svg" alt="lesson-img">
+                        </div>
+                    </a>
+                    <a href="lessons/lesson-4.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Урок 1 Установка Bootstrap</h3>
                             <img src="images/less-1.svg" alt="lesson-img">
                         </div>
                     </a>
-                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                    <a href="lessons/lesson-5.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Урок 1 Установка Bootstrap</h3>
                             <img src="images/less-1.svg" alt="lesson-img">
                         </div>
                     </a>
-                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                    <a href="lessons/lesson-6.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Урок 1 Установка Bootstrap</h3>
                             <img src="images/less-1.svg" alt="lesson-img">
                         </div>
                     </a>
-                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                    <a href="lessons/lesson-7.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Урок 1 Установка Bootstrap</h3>
                             <img src="images/less-1.svg" alt="lesson-img">
                         </div>
                     </a>
-                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                    <a href="lessons/lesson-8.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Урок 1 Установка Bootstrap</h3>
                             <img src="images/less-1.svg" alt="lesson-img">
                         </div>
                     </a>
-                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
-                        <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Урок 1 Установка Bootstrap</h3>
-                            <img src="images/less-1.svg" alt="lesson-img">
-                        </div>
-                    </a>
-                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
-                        <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Урок 1 Установка Bootstrap</h3>
-                            <img src="images/less-1.svg" alt="lesson-img">
-                        </div>
-                    </a>
-                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                    <a href="lessons/lesson-9.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Урок 1 Установка Bootstrap</h3>
                             <img src="images/less-1.svg" alt="lesson-img">
