--- a/index.html
+++ b/index.html
@@ -87,19 +87,19 @@
                     </a>
                     <a href="lessons/lesson-3.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Урок 3 Строки и столбцы</h3>
+                            <h3 class="text-center pt-5">Урок 3 Столбцы и строки</h3>
                             <img src="images/less-1.svg" alt="lesson-img">
                         </div>
                     </a>
                     <a href="lessons/lesson-4.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Урок 1 Установка Bootstrap</h3>
+                            <h3 class="text-center pt-5">Урок 4 Адаптивные колонки и flex-классы</h3>
                             <img src="images/less-1.svg" alt="lesson-img">
                         </div>
                     </a>
                     <a href="lessons/lesson-5.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Урок 1 Установка Bootstrap</h3>
+                            <h3 class="text-center pt-5">Урок 5 Готовые шаблоны bootstrap</h3>
                             <img src="images/less-1.svg" alt="lesson-img">
                         </div>
                     </a>
