--- a/tests.html
+++ b/tests.html
@@ -44,63 +44,63 @@
                     <h1 class="text-center ">Тестирование по темам уроков</h1>
                     <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Тест по уроку 1 Установка Bootstrap</h3>
+                            <h3 class="text-center pt-5">Тест по уроку 1 Введение и установка Bootstrap</h3>
                             <img src="images/test-1.svg" alt="test-img">
                         </div>
                     </a>
                     <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Тест по уроку 1 Установка Bootstrap</h3>
+                            <h3 class="text-center pt-5">Тест по уроку 2 На чём строится Bootstrap</h3>
                             <img src="images/test-1.svg" alt="test-img">
                         </div>
                     </a>
                     <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Тест по уроку 1 Установка Bootstrap</h3>
+                            <h3 class="text-center pt-5">Тест по уроку 3 Столбцы и строки</h3>
                             <img src="images/test-1.svg" alt="test-img">
                         </div>
                     </a>
                     <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Тест по уроку 1 Установка Bootstrap</h3>
+                            <h3 class="text-center pt-5">Тест по уроку 4 Адаптивные колонки и flex-классы</h3>
                             <img src="images/test-1.svg" alt="test-img">
                         </div>
                     </a>
                     <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Тест по уроку 1 Установка Bootstrap</h3>
+                            <h3 class="text-center pt-5">Тест по уроку 5 Изображения и таблицы</h3>
                             <img src="images/test-1.svg" alt="test-img">
                         </div>
                     </a>
                     <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Тест по уроку 1 Установка Bootstrap</h3>
+                            <h3 class="text-center pt-5">Тест по уроку 6 Компоненты Bootstrap. Кнопки и формы</h3>
                             <img src="images/test-1.svg" alt="test-img">
                         </div>
                     </a>
                     <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Тест по уроку 1 Установка Bootstrap</h3>
+                            <h3 class="text-center pt-5">Тест по уроку 7 Компоненты Bootstrap. Навигация и пагинация</h3>
                             <img src="images/test-1.svg" alt="test-img">
                         </div>
                     </a>
                     <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Тест по уроку 1 Установка Bootstrap</h3>
+                            <h3 class="text-center pt-5">Тест по уроку 8 Компоненты Bootstrap. Карусель и аккордионы</h3>
                             <img src="images/test-1.svg" alt="test-img">
                         </div>
                     </a>
                     <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Тест по уроку 1 Установка Bootstrap</h3>
+                            <h3 class="text-center pt-5">Тест по уроку 9 Компоненты Bootstrap. Карточки товаров и модальные окна</h3>
                             <img src="images/test-1.svg" alt="test-img">
                         </div>
                     </a>
 
-                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5 w-100 ">
-                        <div class="final-test-card d-flex flex-column align-items-center justify-content-between">
+                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                        <div class="test-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Итоговое тестирование</h3>
-                            <img src="images/final-test.svg" alt="final-test-img" class=" final-test-img">
+                            <img src="images/final-test.svg" alt="final-test-img">
                         </div>
                     </a>
                     
@@ -113,17 +113,17 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="footer-nav col-lg-3 d-flex flex-column">
-                    <p>Bootstrap</p>
-                    <span><a target="_blank" href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Docs</a></span>
-                    <span><a target="_blank" href="https://getbootstrap.com/docs/5.3/examples/">Examples</a></span>
-                    <span><a target="_blank" href="https://icons.getbootstrap.com/">Icons</a></span>
-                    <span><a target="_blank" href="https://themes.getbootstrap.com/">Themes</a></span>
-                    <span><a target="_blank" href="https://blog.getbootstrap.com/">Blog</a></span>
+                    <p>Bootstrap 5.3.2</p>
+                    <span><a target="_blank" href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Документация</a></span>
+                    <span><a target="_blank" href="https://getbootstrap.com/docs/5.3/examples/">Примеры</a></span>
+                    <span><a target="_blank" href="https://icons.getbootstrap.com/">Иконки</a></span>
+                    <span><a target="_blank" href="https://themes.getbootstrap.com/">Темы</a></span>
+                    <span><a target="_blank" href="https://blog.getbootstrap.com/">Блог</a></span>
                 </div>
 
                 <div class="footer-nav col-lg-4 d-flex flex-column">
-                    <p>Author</p>
-                    <span>Киценко И. В. ИСПВ-02</span>
+                    <p>Автор</p>
+                    <span>Киценко И. В.</span>
                     <span>Ilyakitsenko@proton.me</span>
                     <span>2023-2024</span>
                 </div>
