--- a/index.html
+++ b/index.html
@@ -99,34 +99,42 @@
                     </a>
                     <a href="lessons/lesson-5.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Урок 5 Готовые шаблоны bootstrap</h3>
+                            <h3 class="text-center pt-5">Урок 5 Изображения и таблицы </h3>
                             <img src="images/less-1.svg" alt="lesson-img">
                         </div>
                     </a>
                     <a href="lessons/lesson-6.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Урок 1 Установка Bootstrap</h3>
+                            <h3 class="text-center px-1 pt-5">Урок 6 Кнопки и формы</h3>
                             <img src="images/less-1.svg" alt="lesson-img">
                         </div>
                     </a>
                     <a href="lessons/lesson-7.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Урок 1 Установка Bootstrap</h3>
+                            <h3 class="text-center pt-5">Урок 7 Навигация и пагинация</h3>
                             <img src="images/less-1.svg" alt="lesson-img">
                         </div>
                     </a>
                     <a href="lessons/lesson-8.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Урок 1 Установка Bootstrap</h3>
+                            <h3 class="text-center pt-5">Урок 8 Карусель и аккордионы</h3>
                             <img src="images/less-1.svg" alt="lesson-img">
                         </div>
                     </a>
                     <a href="lessons/lesson-9.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Урок 1 Установка Bootstrap</h3>
+                            <h3 class="text-center pt-5">Урок 9 Карточки товаров и модальные окна</h3>
                             <img src="images/less-1.svg" alt="lesson-img">
                         </div>
                     </a>
+                    
+                    <a href="lessons/lesson-9.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                        <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
+                            <h3 class="text-center pt-5">Урок 10 Вёрстка адаптивного лендинга</h3>
+                            <img src="images/less-1.svg" alt="lesson-img">
+                        </div>
+                    </a>
+                    
                 </div>
             </div>
         </section>
@@ -136,17 +144,17 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="footer-nav col-lg-3 d-flex flex-column">
-                    <p>Bootstrap</p>
-                    <span><a target="_blank" href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Docs</a></span>
-                    <span><a target="_blank" href="https://getbootstrap.com/docs/5.3/examples/">Examples</a></span>
-                    <span><a target="_blank" href="https://icons.getbootstrap.com/">Icons</a></span>
-                    <span><a target="_blank" href="https://themes.getbootstrap.com/">Themes</a></span>
-                    <span><a target="_blank" href="https://blog.getbootstrap.com/">Blog</a></span>
+                    <p>Bootstrap 5.3.2</p>
+                    <span><a target="_blank" href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Документация</a></span>
+                    <span><a target="_blank" href="https://getbootstrap.com/docs/5.3/examples/">Примеры</a></span>
+                    <span><a target="_blank" href="https://icons.getbootstrap.com/">Иконки</a></span>
+                    <span><a target="_blank" href="https://themes.getbootstrap.com/">Темы</a></span>
+                    <span><a target="_blank" href="https://blog.getbootstrap.com/">Блог</a></span>
                 </div>
 
                 <div class="footer-nav col-lg-4 d-flex flex-column">
-                    <p>Author</p>
-                    <span>Киценко И. В. ИСПВ-02</span>
+                    <p>Автор</p>
+                    <span>Киценко И. В.</span>
                     <span>Ilyakitsenko@proton.me</span>
                     <span>2023-2024</span>
                 </div>
